name:                twitter-friend-server
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/mlitchard/twitter-friend-server#readme
license:             BSD3
license-file:        LICENSE
author:              Michael Litchard
maintainer:          michael@schmong.org
copyright:           2016
category:            Haskell
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Auth
                     , Hashing
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , base64-bytestring
                     , bytestring
                     , lsh
                     , scotty
                     , url
                     , wai
                     , wai-cors
  default-language:    Haskell2010

executable twitter-friend-server-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -O2 -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , twitter-friend-server
  default-language:    Haskell2010

test-suite twitter-friend-server-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , twitter-friend-server
                     , hspec
                     , hspec-wai
                     , hspec-wai-json
                     , http-types
                     , aeson
  ghc-options:         -threaded -O2 -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/mlitchard/twitter-friend-server
